tests/spec/build/snapshots/multipackage_enum_constructors_not_leaked.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/utils"

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorGreen() Color {
	return Color{Tag: ColorGreen}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorGreen
)

type Color struct {
	Tag ColorTag
}

func main() {
	x := utils.Add(1, 2)
	_ = MakeColorRed()
	_ = x
}


// === utils/lib.go ===
package utils

func Add(a, b int) int {
	return a + b
}
