tests/spec/build/snapshots/multipackage_generic_tuple_struct_method.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/types"

func main() {
	w := types.Wrapper[int]{F0: 42}
	w.Unwrap()
}


// === types/lib.go ===
package types

type Wrapper[T any] struct {
	F0 T
}

func (w Wrapper[T]) Unwrap() T {
	return w.F0
}
