tests/spec/build/snapshots/multipackage_nested_path_enum_construction.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/types/events"
)

func main() {
	reset := events.MakeEventReset()
	fmt.Println(reset)
}


// === types/events/mod.go ===
package events

func MakeEventClick(arg0 int, arg1 int) Event {
	return Event{Tag: EventClick, X: arg0, Y: arg1}
}

func MakeEventReset() Event {
	return Event{Tag: EventReset}
}

type EventTag uint8

const (
	EventClick EventTag = iota
	EventReset
)

type Event struct {
	Tag EventTag
	X   int
	Y   int
}
