tests/spec/build/snapshots/multipackage_pipeline_in_dependency.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/utils"

func main() {
	utils.Quadruple(10)
}


// === utils/lib.go ===
package utils

func double(x int) int {
	return x * 2
}

func Quadruple(x int) int {
	return double(double(x))
}
